--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,8 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.0",
+    "express": "^4.17.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.15",
     "validator": "^13.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
