--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.15",
+    "multer": "^1.4.2",
+    "sharp": "^0.27.2",
     "validator": "^13.5.2"
   },
   "devDependencies": {
